--- a/elements/oe-feel-editor.html
+++ b/elements/oe-feel-editor.html
@@ -250,6 +250,7 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                     },
                     'KNOWLEDGE_SOURCE': {},
                     'BUSINESS_MODEL': {},
+                    'INPUT': {},
                 });
                 this.set('defaultData.BUSINESS_MODEL', {
                     "decisionType": "DECISION_TABLE",
