--- a/elements/oe-feel-element-list.html
+++ b/elements/oe-feel-element-list.html
@@ -102,6 +102,10 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                     {
                         name: 'Business Model',
                         type: 'business-model'
+                    },
+                    {
+                        name: 'Input',
+                        type: 'input'
                     }
                 ];
                 this.set('icons', icons);
