--- a/elements/oe-feel-service-manager.html
+++ b/elements/oe-feel-service-manager.html
@@ -96,7 +96,7 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                 </label>
             </div>
             <div class="icons-panel layout vertical center">
-                <paper-menu-button class="toolbar-item" no-animations no-overlap horizontal-align="right" vertical-align="bottom" ignore-select
+                <paper-menu-button class="toolbar-item" no-animations no-overlap horizontal-align="right" vertical-align="top" ignore-select
                     close-on-activate>
                     <paper-fab icon="menu" class="dropdown-trigger"></paper-fab>
                     <paper-card class="dropdown-content service-list layout vertical">
