--- a/test/index.html
+++ b/test/index.html
@@ -17,9 +17,9 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
 <body>
   <script>
     WCT.loadSuites([
-      "oe-component-list-test.html",
-      "oe-component-manager-test.html",
-      "oe-navigation-settings-test.html"
+      "oe-feel-designer.html",
+      "oe-feel-footer.html",
+      "oe-feel-business-model-setting.html"
     ]);
 
   </script>
